--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model FutureValueModel
 @{
-    Layout = null;
+    ViewBag.Title = "Future Value Calculator";
 }
 <!--Connor Arends-->
 <!DOCTYPE html>
@@ -8,27 +8,6 @@
     <head>
         <meta name="viewport" content="width=device-width" />
         <title>Home Page</title>
-        <style>
-            body {
-                padding: 1em;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-
-            h1 {
-                margin-top: 0;
-                color: navy;
-            }
-
-            label {
-                display: inline-block;
-                width: 10em;
-                padding-right: 1em;
-            }
-
-            div {
-                margin-bottom: .5em;
-            }
-        </style>
     </head>
     <body>
         <h1>Future Value Calculator</h1>
